# hevctest

./: .aiexclude  README.md  settings.gradle
_debugfile/log/: 0715_USB_264.txt  0717_Rel_NG_265.txt  3_0717_Rel_NG_265.txt  4_0717_Rel_NG_265.txt  buidlLog.txt  log_0708_1.txt  log_0708_2.txt
app/: build.gradle
app/src/androidTest/java/com/brison/hevctest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_jni.cpp
app/src/main/cpp/include/ffmpeg/libavutil/: ffversion.h
app/src/main/java/com/brison/hevctest/: BitReader.java  FFmpegDecoder.java  H264DecodeTest.java  H264ResolutionExtractor.java  HEVCResolutionExtractor.java  HevcDecoder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/brison/hevctest/: ExampleUnitTest.java  FFmpegDecoderTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
